--- a/COFFEESHOP.html
+++ b/COFFEESHOP.html
@@ -276,7 +276,7 @@
     }
 
     footer {
-      background-color: #1a0c05; /* very dark brown */
+      background-color: #1a0c05;
       padding: 30px;
       text-align: center;
       color: #7a5c3e;
