--- a/second_form.html
+++ b/second_form.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> New-Form 📋 </title>
+</head>
 
 <style>
 body {
@@ -77,14 +81,12 @@ box-shadow: 0 8px 15px rgba(0,0,0,0.3);
 <label><b>Email</b></label>
 <input type="email" placeholder="Enter email">
 
-<!-- RADIO BUTTONS -->
 <div class="options">
     <label><b>Gender:</b></label>
     <label><input type="radio" name="gender"> Male</label>
     <label><input type="radio" name="gender"> Female</label>
 </div>
 
-<!-- CHECKBOXES -->
 <div class="options">
     <label><b>Interests:</b></label>
     <label><input type="checkbox"> Coding</label>
