--- a/svg.html
+++ b/svg.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>SVG Triangle</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> SVG'S </title>
 </head>
+
 <body>
-    
 <!-- Circle -->
 <svg width="100" height="100">
     <circle cx= "50" cy="50" r="40" fill="skyblue" />
@@ -227,5 +230,6 @@
             repeatCount="indefinite" />
     </line>
 </svg>
+
 </body>
 </html>
