--- a/FORMS/FORMS.html
+++ b/FORMS/FORMS.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title> Form 📋 </title>
+</head>
+
+<style>
+    body {
+        background-color: rgb(176, 172, 89);
+        text-align: center;
+    }
+</style>
+
+<body>
+    <h1> Student Registration </h1>
+
+    <form>
+        Name: <input type="text"> <br><br>
+        Email: <input type="email"> <br><br>
+        Gender:
+        <input type="checkbox" name="gender"> Male 🙋🏻‍♂️
+        <input type="checkbox" name="gender"> Female 🙋🏻‍♀️ <br><br>
+        Subjects:
+        <input type="checkbox" name="subject"> HTML 
+        <input type="checkbox" name="subject"> CSS 
+        <input type="checkbox" name="subject"> Javascript <br><br>
+
+        <input type="Submit" value="Register">
+    </form>
+</body>
+
+</html>
 
